# hamlet

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json
client/: .env.example  .eslintignore  .gitignore  .oxfmtrc.json  .size-limit.json  CLAUDE.md  README.md  index.html  oxlint.config.json  oxlint.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.electron.config.ts  playwright.env.ts  playwright.package.config.ts  playwright.voice.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.e2e.json  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
client-electron/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client-iced/: Cargo.toml  README.md
client-iced/docs/: module-boundaries.md  native-alpha-qa.md
client-iced/packaging/linux/: com.renodubois.hamlet.desktop  com.renodubois.hamlet.metainfo.xml  works.earendil.hamlet.desktop  works.earendil.hamlet.metainfo.xml
client-iced/packaging/macos/: microphone-permission.plist
client-iced/packaging/windows/: hamlet.exe.manifest
client-iced/scripts/: check.sh
client-iced/src/: avatar.rs  design.rs  embeds.rs  emoji.rs  external_open.rs  lib.rs  main.rs
client-iced/src/api/: mod.rs
client-iced/src/app/: effect.rs  message.rs  mod.rs  route.rs  state.rs  update.rs  view.rs  widget_ids.rs
client-iced/src/auth/: mod.rs
client-iced/src/protocol/: mod.rs
client-iced/src/realtime/: mod.rs
client-iced/src/storage/: mod.rs
client-iced/src/test_support/: fake_api.rs  fake_external_open.rs  fake_realtime.rs  fake_storage.rs  fake_voice.rs  fixtures.rs  harness.rs  mod.rs
client-iced/src/voice/: mod.rs
client-iced/tests/: api_transport.rs  avatar.rs  e2e.rs  embeds.rs  fixtures.rs  links.rs  protocol.rs  realtime.rs  reducers.rs  storage.rs  voice_worker.rs
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/src/: lib.rs
docs/: admin-account-creation.md  channel-unread-notifications-prd.md  hosting-static-client-and-server.md  iced-native-client-conversion-prd.md  message-replies-prd.md  persistent-sqlite-prd.md  persistent-sqlite-smoke-qa.md  persistent-sqlite.md  screen-sharing-support-manual-qa.md  solid-to-react-client-rewrite-prd.md  user-mentions-prd.md  webcam-video-calls-manual-qa.md  webcam-video-calls-prd.md
issues/: 01-native-iced-app-boot-server-url-preference.md  02-cookie-backed-login-register.md  03-session-restore-invalid-session-logout.md  04-channel-navigation-message-history.md  05-send-messages-authenticated-sse.md  06-edit-delete-message-sse-reconciliation.md  07-typing-notifications-expiring-indicators.md  08-create-channels-live-events.md  09-accessible-channel-reorder-optimistic-rollback.md  10-settings-display-name-profile.md  11-avatar-display-upload-delete.md  12-safe-url-recognition-external-open.md  13-native-embeds-image-previews-suppress.md  14-emoji-picker-keyboard-draft-insertion.md  15-voice-presence-channel-list.md  16-livekit-voice-join-leave-switch.md  17-voice-controls-speaking-device-preferences.md  18-package-native-desktop-alpha-qa-docs.md  19-establish-native-visual-tokens-through-the-signed-out-shell.md  20-replace-signed-in-layout-with-two-pane-chat-shell.md  21-make-channel-navigation-compact-and-readable.md  22-move-add-channel-and-account-controls-into-sidebar-footer-regions.md  23-pin-and-polish-the-text-channel-composer.md  24-restyle-message-rows-and-native-embed-cards.md  25-bring-voice-channels-into-the-refreshed-main-shell.md  26-run-final-native-visual-qa-and-gate-checks.md  27-bootstrap-client-electron-copied-renderer-baseline.md  28-launch-the-renderer-in-a-secure-electron-dev-shell.md  29-enforce-shell-navigation-external-link-and-media-permission-policy.md  30-serve-packaged-renderer-from-a-fixed-loopback-origin.md  31-make-packaged-lifecycle-deterministic.md  32-build-the-local-unpacked-electron-alpha-package.md  33-add-electron-smoke-coverage-and-check-script-validation.md  34-document-electron-alpha-commands-qa-and-known-gaps.md  (+1 more)
scripts/: check.sh  (+1 more)
server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.livekit.yml  docker-compose.override.yml  docker-compose.yml  livekit.yaml
server/scripts/: write-livekit-config.sh
server/src/: admin_cli.rs  auth.rs  bootstrap.rs  broadcast.rs  config.rs  csrf.rs  database.rs  embeds.rs  error.rs  lib.rs  main.rs  mentions.rs  middleware.rs  photos.rs  reactions.rs  read_state.rs  seed.rs  startup.rs  telemetry.rs  util.rs  voice.rs
server/src/api/: attachments.rs  auth.rs  avatars.rs  channels.rs  config.rs  csrf.rs  emoji.rs  messages.rs  mod.rs  read_states.rs  users.rs  voice.rs
server/src/entity/: channel.rs  credential.rs  embed.rs  emoji.rs  message.rs  message_attachment.rs  message_initial_mention.rs  message_mention.rs  message_reaction.rs  mod.rs  session.rs  user.rs  user_channel_read_state.rs
server/tests/: admin_cli.rs  api.rs  attachments.rs  auth.rs  avatar.rs  channels.rs  cors.rs  csrf.rs  database_initialization.rs  docker_compose_config.rs  emoji.rs  local_persistence.rs  messages.rs  photo_messages.rs  read_states.rs  users.rs
server/tests/common/: mod.rs
(+272 files in other folders)
