[package]
name = "hamlet"
version = "0.1.0"
edition = "2024"
default-run = "hamlet"

[dependencies]
actix-cors = "0.7.1"
actix-sse = "0.1.0"
actix-web = "4.13.0"
futures-util = "0.3.32"
sea-orm = { version = "^2.0.0-rc.37", features = ["schema-sync", "entity-registry", "sqlx-sqlite", "runtime-tokio"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
thiserror = "2"
tokio = "1.50.0"
tokio-stream = "0.1.18"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
serde_json = "1.0.149"
sentry = { version = "0.48.3", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
argon2 = "0.5"
hex = "0.4"
actix-multipart = "0.8"
actix-files = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
livekit-api = { version = "0.5", default-features = false, features = ["access-token", "webhooks", "services-tokio", "signal-client-tokio", "rustls-tls-native-roots"] }
livekit-protocol = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "charset"] }
scraper = "0.27"
url = "2.5"
env_logger = "0.11.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
